# crt-gameEngine

./: CLAUDE.md  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: handles.rs  lib.rs  logging.rs  math.rs  profiling.rs  time.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/ecs/src/components/: camera.rs  collider.rs  joint.rs  mesh_renderer.rs  mod.rs  physics_body.rs  transform.rs
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs  lib.rs  state.rs
crates/editor/src/panels/: asset_browser.rs  hierarchy.rs  inspector.rs  mod.rs  overlays.rs  profiler.rs  sim_controls.rs  stats.rs  toolbar.rs
crates/elderforge/: Cargo.toml
crates/elderforge/src/: app.rs  assets.rs  debug_overlay.rs  deformable.rs  lib.rs  main.rs
crates/elderforge/src/demos/: avalanche.rs  cloth_drape.rs  cloth_drape_showcase.rs  cloth_flag.rs  cloth_tear.rs  debug_bvh.rs  debug_cloth.rs  debug_layers.rs  debug_solo.rs  debug_stack.rs  mixed.rs  mod.rs  pendulum.rs  sandbox.rs  soft_ball.rs  softbody_drop.rs  stacking.rs  stress.rs
crates/elderforge/src/systems/: editor.rs  mod.rs  physics.rs  render.rs
crates/elderforge/tests/: debug_demos.rs  debug_render.rs  demos_render.rs  scene_io.rs  scene_render.rs  window_smoke.rs
crates/physics/: Cargo.toml
crates/physics/src/: body.rs  debug.rs  lib.rs  material.rs  query.rs  soft.rs  world.rs
crates/physics/src/broadphase/: bvh.rs  mod.rs
crates/physics/src/fluid/: mod.rs  sph.rs
crates/physics/src/narrowphase/: convex.rs  epa.rs  gjk.rs  mod.rs  sat.rs
crates/physics/src/shapes/: box_.rs  capsule.rs  convex_hull.rs  mod.rs  sphere.rs  trimesh.rs
crates/physics/src/solver/: constraints.rs  impulse.rs  joints.rs  mod.rs  soft.rs  xpbd.rs
crates/physics/tests/: bvh.rs  debug_overlay.rs  friction.rs  joints.rs  narrowphase.rs  rigid_body_sim.rs  sleeping.rs  soft.rs  xpbd.rs
crates/platform/: Cargo.toml
crates/platform/src/: event.rs  input.rs  lib.rs  time.rs  window.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: cache.rs  camera.rs  context.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  primitives.rs  texture.rs
crates/renderer/src/passes/: debug.rs  forward.rs  mod.rs  pbr.rs  shadow.rs  ui.rs  unlit.rs
crates/renderer/src/shaders/: debug.wgsl  forward.wgsl  pbr.wgsl  shadow.wgsl  unlit.wgsl
crates/renderer/tests/: triangle_readback.rs
crates/scene/: Cargo.toml
crates/scene/src/: format.rs  lib.rs  loader.rs  scene.rs  serializer.rs
crates/scene/src/assets/: mesh.rs  mod.rs  registry.rs  texture.rs
crates/scene/tests/: integration.rs  roundtrip.rs
