[workspace]
members = [
    "crates/core",
    "crates/platform",
    "crates/renderer",
    "crates/physics",
    "crates/ecs",
    "crates/scene",
    "crates/editor",
    "crates/elderforge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wgpu = "22"
winit = "0.30"
# Shared vocabulary between winit (platform) and wgpu (renderer) for surface
# creation; must stay on the 0.6 line both of them use.
raw-window-handle = "0.6"
glam = "0.29"
hecs = "0.10"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
