[package]
name = "elderforge-ecs"
version.workspace = true
edition.workspace = true

[dependencies]
elderforge-core = { path = "../core" }
elderforge-physics = { path = "../physics" }
hecs = { workspace = true }
# Components derive Serialize/Deserialize for the scene crate's .escene format.
serde = { workspace = true }
