[package]
name = "elderforge"
version.workspace = true
edition.workspace = true

[dependencies]
elderforge-core = { path = "../core" }
elderforge-platform = { path = "../platform" }
elderforge-renderer = { path = "../renderer" }
elderforge-physics = { path = "../physics" }
elderforge-ecs = { path = "../ecs" }
elderforge-scene = { path = "../scene" }
elderforge-editor = { path = "../editor" }
anyhow = { workspace = true }
log = { workspace = true }
# egui <-> window glue, wired up together with the winit event loop.
egui = { workspace = true }
egui-winit = { workspace = true }
