[package]
name = "elderforge"
version.workspace = true
edition.workspace = true

[dependencies]
elderforge-core = { path = "../core" }
elderforge-platform = { path = "../platform" }
elderforge-renderer = { path = "../renderer" }
elderforge-physics = { path = "../physics" }
elderforge-ecs = { path = "../ecs" }
elderforge-scene = { path = "../scene" }
elderforge-editor = { path = "../editor" }
anyhow = { workspace = true }
log = { workspace = true }
# The egui <-> window/wgpu glue now lives in the editor crate (EditorState); the
# binary just forwards platform events to it and lets it paint into the frame.

[dev-dependencies]
# Headless GPU integration tests (offscreen render + readback) talk to wgpu
# directly, the same way the renderer crate's triangle readback test does.
wgpu = { workspace = true }
pollster = { workspace = true }
