[package]
name = "elderforge-physics"
version.workspace = true
edition.workspace = true

[dependencies]
elderforge-core = { path = "../core" }
thiserror = { workspace = true }
log = { workspace = true }
# Bodies, colliders, shapes, and materials derive Serialize/Deserialize so the
# scene crate's .escene format can persist physics state directly.
serde = { workspace = true }
