[package]
name = "elderforge-scene"
version.workspace = true
edition.workspace = true

[dependencies]
elderforge-core = { path = "../core" }
elderforge-ecs = { path = "../ecs" }
elderforge-physics = { path = "../physics" }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
gltf = { workspace = true }
